format of names in json has been changed to camelCase, the time format has been changed to the corresponding RFC3339, readme file hac been rewritten
